--- a/index.html
+++ b/index.html
@@ -37,9 +37,16 @@
             -webkit-line-clamp: 4;
             -webkit-box-orient: vertical;
         }
-        #length-field{
+        .input-field{
             outline: none;
             border: none;
+            width: 80px;
+            font-size: 16px;
+        }
+        .thumb-img{
+            /* display: inline-block; */
+            width: 200px;
+            height: 170px;
         }
     </style>
 </head>
@@ -69,16 +76,26 @@
     </header>
     <main class="container">
         <section class="">
-            <input class="w-100 shadow-sm py-2 px-3" type="text" name="" id="length-field">
+            <input class="w-100 shadow-sm py-2 px-3 input-field" type="text" name="" id="length-field">
         </section>
+
+        <section class="mt-5">
+            <div class="row">
+                <div class="col-md-6">
+                    <h5 class="">Sort By View: <input class="input-field shadow-sm py-1 px-2" type="text" name="" id="" placeholder="Default"></h5>
+                </div>
+                <div class="col-md-6 d-flex justify-content-end">
+                    <button class="btn btn-primary me-2">Today's Pick</button>
+                    <button class="btn btn-outline-primary">Trending</button>
+                </div>
+            </div>
+        </section>
+
         <section  class="mt-5">
-            <div id="single-news-category" class="row row-cols-1 row-cols-md-1 g-4"></div>
+            <div id="single-news-category" class="row row-cols-1 row-cols-md-2 g-4"></div>
         </section>
         <!-- Modal -->
         <section>
-
-           
-            
             <div class="modal fade" id="newsDetailModal" tabindex="-1" aria-labelledby="newsDetailModalLabel" aria-hidden="true">
                 <div class="modal-dialog">
                     <div class="modal-content">
