--- a/index.html
+++ b/index.html
@@ -48,6 +48,9 @@
             width: 200px;
             height: 170px;
         }
+        nav{
+            border-bottom: 1px solid #dadada;
+        }
     </style>
 </head>
 <body>
@@ -91,9 +94,18 @@
             </div>
         </section>
 
+        <section id="spinner" class="d-none">
+            <div class="d-flex justify-content-center align-items-center" style="height: 400px;">
+                <div class="spinner-border" role="status">
+                    <span class="visually-hidden">Loading...</span>
+                </div>
+            </div>
+        </section>
+
         <section  class="mt-5">
             <div id="single-news-category" class="row row-cols-1 row-cols-md-2 g-4"></div>
         </section>
+        
         <!-- Modal -->
         <section>
             <div class="modal fade" id="newsDetailModal" tabindex="-1" aria-labelledby="newsDetailModalLabel" aria-hidden="true">
@@ -114,9 +126,10 @@
                 </div>
             </div>
         </section>
+        
     </main>
 
-    <script src="js/app.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="js/app.js"></script>
 </body>
 </html>
