--- a/index.html
+++ b/index.html
@@ -115,9 +115,7 @@
                             <h5 class="modal-title" id="newsDetailModalLabel"></h5>
                             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                         </div>
-                        <div id="details" class="modal-body">
-                            ...
-                        </div>
+                        <div id="details" class="modal-body"></div>
                         <div class="modal-footer">
                             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
                             <button type="button" class="btn btn-primary">Save changes</button>
@@ -126,8 +124,8 @@
                 </div>
             </div>
         </section>
-        
     </main>
+    
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="js/app.js"></script>
