--- a/blog.html
+++ b/blog.html
@@ -6,17 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <style>
-        body{
-            background-color: #fafafa;
-        }
-        nav{
-            border-bottom: 1px solid #dadada;
-        }
-        .card-height{
-            height: 650px;
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     
@@ -80,8 +70,10 @@
                         <img src="img/2KuSYN_0eSutcsQ00.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h4 class="card-title">Map, ForEach, Filter, Find</h4>
-                            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional
-                                content.</p>
+                            <p class="card-text">Map, forEach, filter, find these all are JavaScript array methods. Map and foreach are similar but has a little
+                            difference between them. Both are used to loop through an array to obtain the values from the particular array. But we
+                            cannot use the values if we loop through the array using forEach, if we want to use the values of an array we have to
+                            use map method.</p>
                         </div>
                     </div>
                 </div>
