--- a/index.html
+++ b/index.html
@@ -5,53 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>News Today</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <style>
-        body{
-            background-color: #fafafa;
-        }
-        ul{
-            list-style: none;
-        }
-        a{
-            text-decoration: none;
-            color: #000;
-        }
-        .card-text{
-            height: 70px;
-            overflow: hidden;
-            display: -webkit-box;
-            -webkit-line-clamp: 3;
-            -webkit-box-orient: vertical;
-        }
-        #categories{
-            font-size: 20px;
-        }
-        .post-img{
-            width: 50px;
-            border-radius: 50%;
-        }
-        .details{
-            height: 100px;
-            overflow: hidden;
-            display: -webkit-box;
-            -webkit-line-clamp: 4;
-            -webkit-box-orient: vertical;
-        }
-        .input-field{
-            outline: none;
-            border: none;
-            width: 80px;
-            font-size: 16px;
-        }
-        .thumb-img{
-            /* display: inline-block; */
-            width: 200px;
-            height: 170px;
-        }
-        nav{
-            border-bottom: 1px solid #dadada;
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <!-- Navigation Bar -->
@@ -75,7 +29,7 @@
                 </div>
             </div>
         </nav>
-        <ul id="categories" class="container d-flex justify-content-between mt-3"></ul>
+        <ul id="categories" class="container d-flex justify-content-between mt-3 text-center"></ul>
     </header>
     <main class="container">
         <section class="">
@@ -84,13 +38,13 @@
 
         <section class="mt-5">
             <div class="row">
-                <div class="col-md-6">
-                    <h5 class="">Sort By View: <input class="input-field shadow-sm py-1 px-2" type="text" name="" id="" placeholder="Default"></h5>
-                </div>
-                <div class="col-md-6 d-flex justify-content-end">
-                    <button class="btn btn-primary me-2">Today's Pick</button>
-                    <button class="btn btn-outline-primary">Trending</button>
-                </div>
+                    <div class="col-md-6 col-sm-12 sort">
+                        <h5 class="">Sort By View: <input class="input-field shadow-sm py-1 px-2" type="text" name="" id="" placeholder="Default"></h5>
+                    </div>
+                    <div class="col-md-6 col-sm-12 d-flex justify-content-end buttons ms-auto">
+                        <button class="btn btn-primary me-2">Today's Pick</button>
+                        <button class="btn btn-outline-primary">Trending</button>
+                    </div>
             </div>
         </section>
 
@@ -129,5 +83,6 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="js/app.js"></script>
+    <script src="https://unpkg.com/ionicons@4.5.10-0/dist/ionicons.js"></script>
 </body>
 </html>
