--- a/blog.html
+++ b/blog.html
@@ -37,7 +37,7 @@
         <section class="mb-5">
             <div class="row row-cols-1 row-cols-md-2 g-4">
                 <div class="col">
-                    <div class="card card-height">
+                    <div class="card">
                         <img src="img/var-vs-let-vs-const-in-javascript.png" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h4 class="card-title">Var, Let, Const</h4>
@@ -54,8 +54,8 @@
                     </div>
                 </div>
                 <div class="col">
-                    <div class="card card-height">
-                        <img src="img/fb5168c1778bf2c15fc07c30434547417a6cf59d-1200x630.png" class="card-img-top" alt="...">
+                    <div class="card">
+                        <img src="img/arrow-regular-function.png" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h4 class="card-title">Arrow vs Regular Function</h4>
                             <p class="card-text">Template literal or template string is used to write multiline sentences without any hassle. We can easily join the long
@@ -66,20 +66,20 @@
                     </div>
                 </div>
                 <div class="col">
-                    <div class="card card-height">
-                        <img src="img/2KuSYN_0eSutcsQ00.jpg" class="card-img-top" alt="...">
+                    <div class="card">
+                        <img src="img/map-forEach-filter-find.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h4 class="card-title">Map, ForEach, Filter, Find</h4>
                             <p class="card-text">Map, forEach, filter, find these all are JavaScript array methods. Map and foreach are similar but has a little
                             difference between them. Both are used to loop through an array to obtain the values from the particular array. But we
                             cannot use the values if we loop through the array using forEach, if we want to use the values of an array we have to
-                            use map method.</p>
+                            use map method. Filter methods creates a new array with the elements that passed a test or fulfill a condition provided by a function. But find method will just return one elements from array if the condition is fulfilled. </p>
                         </div>
                     </div>
                 </div>
                 <div class="col">
-                    <div class="card card-height">
-                        <img src="img/maxresdefault.jpg" class="card-img-top" alt="...">
+                    <div class="card">
+                        <img src="img/template-literals.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h4 class="card-title">Template Literals</h4>
                             <p class="card-text">Arrow function is a ES6 feature. It’s also called as fat arrow function. Regular and arrow functions are work similar in
@@ -95,7 +95,7 @@
     </main>
 
     <footer>
-        <p class="text-center">All Rights Reserved || Md Mehedi Hasan Tonmoy</p>
+        <p class="text-center">&copy; All Rights Reserved || Md Mehedi Hasan Tonmoy</p>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
