--- a/blog.html
+++ b/blog.html
@@ -5,21 +5,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <!-- Bootstrap Style File -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Custom Style Sheet -->
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <!-- Navigation Bar -->
+    <!-- Header Start -->
     <header>
         <nav class="navbar navbar-expand-lg bg-light">
             <div class="container">
-                <a class="navbar-brand" href="#">News Today</a>
+                <a class="navbar-brand logo" href="#">News Today</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav ms-auto">
+                    <ul class="navbar-nav nav-menu ms-auto">
                         <li class="nav-item">
                             <a class="nav-link" href="index.html">News</a>
                         </li>
@@ -32,8 +35,10 @@
         </nav>
         <ul id="categories" class="container d-flex justify-content-between mt-3"></ul>
     </header>
-
+    <!-- Header End -->
+    <!-- Main Start -->
     <main class="container">
+        <!-- Blog Section -->
         <section class="mb-5">
             <div class="row row-cols-1 row-cols-md-2 g-4">
                 <div class="col">
@@ -93,9 +98,10 @@
             </div>
         </section>
     </main>
-
-    <footer>
-        <p class="text-center">&copy; All Rights Reserved || Md Mehedi Hasan Tonmoy</p>
+    <!-- Main End -->
+    <!-- Footer -->
+    <footer class="bg-primary mt-4 py-2">
+        <p class="text-center text-white mt-3">&copy; All Rights Reserved || Md Mehedi Hasan Tonmoy</p>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
