--- a/blog.html
+++ b/blog.html
@@ -63,10 +63,14 @@
                         <img src="img/arrow-regular-function.png" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h4 class="card-title">Arrow vs Regular Function</h4>
-                            <p class="card-text">Template literal or template string is used to write multiline sentences without any hassle. We can easily join the long
-                            sentences without using empty string and addition operator. We can also show the sentences as multi rows without adding
-                            any other commands. Template literals also used to calculate one-line mathematical tasks and can also use simple
-                            function within it. It’s a ES6 feature.</p>
+                            <p class="card-text">Arrow function is a ES6 feature. It’s also called as fat arrow function. Regular and arrow
+                                functions are work similar in
+                                manner but have some certain differences. Both the functions give us the same output, but arrow function uses fewer
+                                lines unlike regular function. Curly brackets are not necessary if one expression is present. Parentheses are also
+                                not
+                                required if just one argument is passed in a single parameter. Return keyword is not needed in a simple single line
+                                of
+                                code.</p>
                         </div>
                     </div>
                 </div>
@@ -87,11 +91,12 @@
                         <img src="img/template-literals.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h4 class="card-title">Template Literals</h4>
-                            <p class="card-text">Arrow function is a ES6 feature. It’s also called as fat arrow function. Regular and arrow functions are work similar in
-                            manner but have some certain differences. Both the functions give us the same output, but arrow function uses fewer
-                            lines unlike regular function. Curly brackets are not necessary if one expression is present. Parentheses are also not
-                            required if just one argument is passed in a single parameter. Return keyword is not needed in a simple single line of
-                            code.</p>
+                            <p class="card-text">Template literal or template string is used to write multiline sentences without any hassle. We can
+                                easily join the long
+                                sentences without using empty string and addition operator. We can also show the sentences as multi rows without
+                                adding
+                                any other commands. Template literals also used to calculate one-line mathematical tasks and can also use simple
+                                function within it. It’s a ES6 feature.</p>
                         </div>
                     </div>
                 </div>
